[gd_scene load_steps=7 format=3 uid="uid://dpo2batpi8tuw"]

[ext_resource type="Script" path="res://Scripts/HealthBarController.gd" id="1_qea7d"]
[ext_resource type="Texture2D" uid="uid://u4b2dromcfxu" path="res://Assets/Sprites/LifeBar.png" id="2_fog6d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8b314"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_887v6"]
bg_color = Color(0.32549, 0.686275, 0.466667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l146h"]
bg_color = Color(0.054902, 0.054902, 0.054902, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_obb3x"]
bg_color = Color(1, 1, 1, 1)

[node name="HealthBar" type="ProgressBar"]
self_modulate = Color(0, 1, 0, 1)
z_index = 1
offset_left = 41.0
offset_top = 25.0
offset_right = 281.0
offset_bottom = 35.0
theme_override_styles/background = SubResource("StyleBoxEmpty_8b314")
theme_override_styles/fill = SubResource("StyleBoxFlat_887v6")
value = 86.79
show_percentage = false
script = ExtResource("1_qea7d")
greyLifeUpdateSpeed = 40.0
onHitDisplacement = Vector2(2, 5)

[node name="DamageBar" type="ProgressBar" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_l146h")
theme_override_styles/fill = SubResource("StyleBoxFlat_obb3x")
value = 90.0
show_percentage = false

[node name="GreyLifeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LifeBar" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(120.5, 5)
scale = Vector2(1.20673, 1)
texture = ExtResource("2_fog6d")

[connection signal="timeout" from="GreyLifeTimer" to="." method="on_grey_life_timer_ended"]
